# DYNAGNN

./: .gitignore  DYNAGNN.py  Nordic_test_setup.py  README.md  THIRD_PARTY_LICENSES  config.yaml  main.py  requirements.txt
AMS/: README.md  main.py  pyproject.toml
AMS/dynagnn_ams/: __init__.py  cli.py
AMS/dynagnn_ams/models/Nordic/: edge_attr_scaler.pkl  x_scaler.pkl
AMS/dynagnn_ams/modules/: base_graph_construction.py  event_graph_construction.py  node_breaker_simplification.py  pair_aware_models.py
AMS/models/Nordic/: edge_attr_scaler.pkl
AMS/modules/: DSL_reader.py  __init__.py  electric_distance.py  event_graph_construction.py  pair_aware_gine.py  pair_aware_models.py
docs/: HowTo.md  PairAwareGINE.md  updates.md  upgrades.md
modules/: __init__.py  actions_detection.py  curve_generation.py  dataset_split.py  disconnections_detection.py  dyd_mapping.py  dynawo_runner.py  electric_distance.py  event_files.py  gat_spower_pair_aware_six_class.py  gat_spower_training.py  gat_training_exports.py  gat_voltage_pair_aware_six_class.py  gat_voltage_training.py  generator_snom.py  graph_construction.py  initialization.py  kpi.py  kpi_visualization.py  normalization.py  op_context_aggregate.py  pair_aware_gine.py  pair_aware_inference.py  pair_aware_repository.py  pair_aware_training.py  paths.py  pipeline_logging.py  simulation_results.py  spower_training.py  training_plots.py  voltage_training.py
src/: __init__.py  build_op_assets.py  check_spower_six_class_inputs.py  curves_post_process.py  dataset_construction.py  dataset_split_step.py  simulate.py  (+7 more)
(+70 files in other folders)
