[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynagnn-ams"
version = "1.2.0"
description = "DYNAGNN Adaptive Model Selection: TwinEU DSL scenario → IIDM switch retention"
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Sustainable Power Systems Laboratory", email = "info@sps-lab.org" },
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "joblib>=1.3",
  "scikit-learn>=1.7.2,<1.8",
  "tqdm>=4.66",
  "torch",
  "torch-geometric>=2.4.0",
  "pypowsybl>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/SPS-L/DYNAGNN"
Repository = "https://github.com/SPS-L/DYNAGNN"

[project.scripts]
dynagnn-ams = "dynagnn_ams.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dynagnn_ams*"]

[tool.setuptools.package-data]
dynagnn_ams = ["models/**/*"]
